# cis194-spring13

./: .gitignore
Lesson01/: cis194.cabal
Lesson01/src/Cis194/Lesson01/: TowersOfHanoi.hs  Validator.hs
Lesson01/test/Cis194/Lesson01/: TowersOfHanoiSpec.hs  ValidatorSpec.hs
Lesson02/: Lesson02.cabal  README.md
Lesson02/src/Cis194/Lesson02/: Log.hs  LogAnalysis.hs
Lesson02/test/Cis194/Lesson02/: LogAnalysisSpec.hs
Lesson03/: Lesson03.cabal  README.md
Lesson03/src/Cis194/Lesson03/: Golf.hs
Lesson03/test/Cis194/Lesson03/: GolfSpec.hs
Lesson04/: Lesson04.cabal  README.md
Lesson04/src/Cis194/Lesson04/: Wholemeal.hs
Lesson04/test/Cis194/Lesson04/: WholemealSpec.hs
Lesson05/: Lesson05.cabal  README.md
Lesson05/src/Cis194/Lesson05/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs
Lesson05/test/Cis194/Lesson05/: CalcSpec.hs
Lesson06/: Lesson06.cabal  README.md
Lesson06/src/Cis194/Lesson06/: Fibonacci.hs
Lesson06/test/Cis194/Lesson06/: FibonacciSpec.hs
Lesson07/: Lesson07.cabal  README.md
Lesson07/app/: Main.hs
Lesson07/src/Cis194/Lesson07/: Buffer.hs  Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBuffer.hs
Lesson07/test/Cis194/Lesson07/: JoinListSpec.hs  ScrabbleSpec.hs
Lesson08/: Lesson08.cabal  README.md
Lesson08/src/Cis194/Lesson08/: Employee.hs  Party.hs
Lesson08/test/Cis194/Lesson08/: PartySpec.hs
