name:                Lesson07
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lesson07#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cis194.Lesson07.JoinList
                     , Cis194.Lesson07.StringBuffer
                     , Cis194.Lesson07.Editor
  other-modules:       Cis194.Lesson07.Buffer
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.2
  default-language:    Haskell2010

executable Lesson08
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Lesson07
  default-language:    Haskell2010

test-suite Lesson07-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Lesson07
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Lesson07
